--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@ h3{
 
 h1{
     font-family: Georgia, 'Times New Roman', Times, serif;
+    text-align: center;
+    color: rgb(155, 6, 155);
+    
 }
 
 .Summary{
@@ -22,7 +25,28 @@ h1{
 }
 
 .profile_photo{
+    width: 10%;
+    height: 10%;
+    margin-left: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: solid;
+    border-color: purple;
+}
+
+.projects{
+    background-color: aqua;
+    
+}
+
+.engineering{
+    text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: rgb(112, 6, 112);
+}
+
+.image{
     width: 50%;
     height: 50%;
-    margin-left: auto;
 }
